--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
-    implementation 'com.google.android.material:material:1.0.0'
+
+    implementation 'com.github.santalu:maskara:1.0.0'
 }
