--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
 
     implementation 'com.github.santalu:maskara:1.0.0'
+
+//    implementation 'com.github.martinstamenkovski:ARIndicatorView:2.0.0'
+//
+    implementation 'com.github.intik:overflow-pager-indicator:3.1.0'
+
 }
