--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
 //
     implementation 'com.github.intik:overflow-pager-indicator:3.1.0'
 
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 }
